Ajustes nos Endpoints - Aninhamento dos endpoints no Swagger por tags; - Alterações nas descrições dos endpoints; - Implementação de middleware para forçar resposta em JSON - visto requisito do teste não utilizar quaisquer interface Web; - Aninhamento dos endpoints por rota e prefixo; - Atualização do arquivo OpenAPI; - Isolamento final do container/serviço Docker (remoção do acesso direto aos serviços PHP-FPM via porta 9000); - Adição de chave de ambiente para habilitar ou desabilitar o Swagger UI;
