# app/app/Http/Controllers/API.php
@@ -10,12 +10,16 @@ use OpenApi\Attributes as OA;
     description: "Aplicação backend responsável pelo processamento, transformação e sincronização de dados de produtos e preços, utilizando Views SQL para padronização das informações e disponibilizando os dados por meio de uma API REST.",
     title: "Versottech - Teste Backend PHP"
 )]
+#[OA\Tag(name: "Gerenciamento", description: "Endpoints gerenciamento do serviços, execução de testes, …")]
+#[OA\Tag(name: "Sincronização", description: "Endpoints para sincronização de Preços, Produtos, …")]
+
 class API extends BaseController
 {
 
     #[OA\Get(
         path: "/api/test",
-        summary: "Sample API Endpoint",
+        summary: "Healthcheck",
+        tags: ["Gerenciamento"],
         responses: [
             new OA\Response(response: 200, description: "Success")
         ]
@@ -23,5 +27,18 @@ class API extends BaseController
     public function testEndpoint()
     {
         return response()->json(['message' => 'Swagger is working!']);
+    }
+
+    #[OA\Get(
+        path: "/api/csrf_token",
+        summary: "Retorna CSRF Token da sessão atual.",
+        tags: ["Gerenciamento"],
+        responses: [
+            new OA\Response(response: 200, description: "Success")
+        ]
+    )]
+    public function csrfToken()
+    {
+        return response()->json(['token' => csrf_token()]);
     }
 }
